# americasnlp2026

./: .gitignore  README.md  captioning.md  pyproject.toml  requirements.txt
configs/: captioning_lora_sft.yaml  deepspeed_lora_zero3.json  full_sft.yaml  grpo.yaml  lora_grpo.yaml  lora_sft.yaml  tiny_aya_full_sft.yaml  tiny_aya_grpo.yaml
scripts/: build_amerciasnlp2026_hf.py  build_americasnlp2026_hf.py  build_captioning_hf.py  build_wixarika_spanish_hf.py  captioning.sh  captioning_lora_sft.sh  convert_mayanv_to_raw.py  eval_lora_vllm.sh  eval_lora_vllm_2.sh  full_sft.sh  gpt_captioning.py  gpt_captioning.sh  grpo.sh  lora_grpo.sh  lora_sft.sh  merge_lora_adapter_vllm.sh  sft.sh  sft_multi_gpu.sh  test.sh  test_captioning_lora_sft.sh  test_grpo.sh  test_lora_grpo.sh  test_lora_sft.sh  test_lora_sft_2.sh  test_sft.sh  train.sh
src/test/: captioning.py  chrf_eval.py  eval.py  eval_lora.py  eval_lora_vllm.py  eval_lora_vllm_2.py  merge_lora_adapter_vllm.py
src/train/: __init__.py  captioning_lora_sft.py  config.py  constants.py  data.py  full_sft.py  grpo.py  grpo_common.py  language_sampling.py  lora_grpo.py  lora_sft.py  sft.py  sft_common.py  train.py
